--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,9 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -28,11 +27,23 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  font-size: 32px;
+  border: none;
+}
+
+button{
+  font-size: 30px;
+}
+h2{
+  margin: 15px;
+}
+
+.header_btn{
+  margin: 15px;
+    font-size: 30px;
+    background: transparent;
+    border: transparent;
+    cursor: pointer;
+    color: white;
 }
